<resources>
    <string name="app_name">P0341_SQLite</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="read">Read</string>
    <string name="id">Id</string>
    <string name="clear">Clear</string>
    <string name="upgrade">Upgrade</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>