<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etId" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        style="@style/MyStyle"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRead"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />
    <Button
        android:id="@+id/btnRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/read"
        style="@style/MyStyle"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/btnClear"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintTop_toTopOf="@id/btnAdd" />
    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        style="@style/MyStyle"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btnRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd" />
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        style="@style/MyStyle"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/btnAdd" />
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        style="@style/MyStyle"
        app:layout_constraintTop_toTopOf="@id/btnUpdate"
        app:layout_constraintBottom_toBottomOf="@id/btnUpdate"
        app:layout_constraintStart_toStartOf="@id/btnRead"
        app:layout_constraintEnd_toEndOf="@id/btnRead" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate">

        <!-- Table Heading -->

        <TableRow android:background="@color/green">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id"
                style="@style/TableHead" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/name"
                style="@style/TableHead"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/email"
                style="@style/TableHead" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>